--- a/package.json
+++ b/package.json
@@ -9,7 +9,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.4.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "moment": "^2.29.4",
+    "next": "^13.4.4",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.11.2",
+    "react-test-renderer": "^18.2.0",
+    "react-with-styles": "^5.0.0",
+    "recompose": "^0.30.0",
+    "redux": "^4.2.1",
+    "redux-pack": "^0.1.5",
+    "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.8",
+    "selector-action": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +49,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@storybook/addon-actions": "^7.0.18",
+    "@storybook/addons": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "aphrodite": "^2.4.0",
+    "babel-loader": "^9.1.2",
+    "json-server": "^0.17.3",
+    "node-sass": "^9.0.0",
+    "react-with-styles-interface-aphrodite": "^6.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "sass-loader": "^13.3.1",
+    "storybook-addon-jsx": "^7.3.14"
   }
 }
